fix: fix ProsePre horizontal overflow

--- a/assets/styles/prose.css
+++ b/assets/styles/prose.css
@@ -58,6 +58,7 @@
   margin-left: 1em;
   margin-top: var(--app-prose-v-margin);
   margin-bottom: var(--app-prose-v-margin);
+  overflow-x: scroll;
 }
 
 /* ProseH1 */
